--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Philadelphia, PA"
   employer         : "University of Pennsylvania"
   uri              : # URL
-  email            : "shervink[at]seas[dot]upenn[dot]edu" 
+  email            : "shervink@seas.upenn.edu" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
