--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "MFZEnH0b_400x400.jpg"
   name             : "Shervin Khalafi"
-  pronouns         : # example: "she/her"  
+  pronouns         : # example: "He/Him"  
   bio              : "PhD Student"
   location         : "Philadelphia, PA"
   employer         : "University of Pennsylvania"
