--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "shervinkhal/shervinkhal.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "MFZEnH0b_400x400.jpg"
+  avatar           : "MFZEnH0b_400x400.png"
   name             : "Shervin Khalafi"
   pronouns         : # example: "He/Him"  
   bio              : "PhD Student"
